--- a/oneliners/templates/legal/privacy-policy.html
+++ b/oneliners/templates/legal/privacy-policy.html
@@ -1,5 +1,11 @@
-<h1>Privacy Policy</h1>
-<p>Last updated: September 18, 2023</p>
+{% extends "base.html" %}
+
+{% block pagetitle %}Privacy Policy{% endblock %}
+{% block pageheading %}<h1>Privacy Policy</h1>{% endblock %}
+
+{% block content %}
+
+<p>Last updated: September 23, 2023</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information
     when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and
@@ -215,3 +221,5 @@
 <ul>
     <li>By email: info@janosgyerik.com</li>
 </ul>
+
+{% endblock %}
