--- a/oneliners/templates/html5.html
+++ b/oneliners/templates/html5.html
@@ -62,9 +62,67 @@
         {% block main %}{% endblock %}
     </div>
 
-    <footer class="footer">
-        {% block footer %}{% endblock %}
+    <!-- Footer -->
+    <footer class="bg-light text-center text-muted">
+        <!-- Section: Links  -->
+        <section class="p-4">
+            <div class="container text-center text-md-start">
+                <!-- Grid row -->
+                <div class="row">
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto">
+                        <!-- Content -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            <img src="{% static 'images/favicon.ico' %}">
+                            bashoneliners.com
+                        </h6>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Legal
+                        </h6>
+                        <p>
+                            <a href="{% url 'privacy-policy' %}">Privacy Policy</a>
+                        </p>
+                        <p>
+                            <a href="{% url 'terms-of-service' %}">Terms of Service</a>
+                        </p>
+                        <p>
+                            <a href="{% url 'code-of-conduct' %}">Code of Conduct</a>
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                        <p><i class="fab fa-twitter me-3"></i>
+                            <a href="https://twitter.com/bashoneliners">@bashoneliners</a></p>
+                        <p><i class="fas fa-square-rss me-3"></i>
+                            <a href="{% url 'feeds' %}">RSS</a></p>
+                        <p><i class="fab fa-github me-3"></i>
+                            <a href="https://github.com/janosgyerik/bashoneliners/issues">GitHub Issues</a></p>
+                    </div>
+                    <!-- Grid column -->
+                </div>
+                <!-- Grid row -->
+            </div>
+        </section>
+        <!-- Section: Links  -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+            <div>© 2023 Copyright: bashoneliners.com</div>
+            <div>User contributions licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>.</div>
+        </div>
+        <!-- Copyright -->
     </footer>
+    <!-- Footer -->
 
     <!-- MDB -->
     <script type="text/javascript" src="{% static 'mdb/js/mdb.min.js' %}?v=1"></script>
