--- a/oneliners/templates/oneliners/pages/search.html
+++ b/oneliners/templates/oneliners/pages/search.html
@@ -21,7 +21,8 @@
                     {% endwith %}
                 </div>
                 <div class="col-md-3 py-2">
-                    <input type="submit" value="Search" class="btn btn-primary btn-block"/>
+                    <button type="submit" class="btn btn-primary btn-block">
+                        <i class="fas fa-magnifying-glass me-2"></i>Search</button>
                 </div>
             </div>
 
