--- a/oneliners/templates/oneliners/elements/oneliners_tabs.html
+++ b/oneliners/templates/oneliners/elements/oneliners_tabs.html
@@ -12,6 +12,6 @@
         <a class="nav-link {{ active_categories }}" href="{% url 'oneliners_categories' %}" role="tab" data-ordering="popular">Categories</a>
     </li>
     <li class="nav-item" role="presentation">
-        <a class="nav-link {{ active_tags }}" href="{% url 'oneliners_tags' %}" role="tab" data-ordering="popular">Commands</a>
+        <a class="nav-link {{ active_commands }}" href="{% url 'oneliners_commands' %}" role="tab" data-ordering="popular">Commands</a>
     </li>
 </ul>
