--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -78,6 +78,20 @@ These one-liners should help you automate tasks, troubleshoot problems, whether 
         $.ajax(options);
     }
 
+    function search_by_filters() {
+        var options = {
+            url: '{% url 'search_by_filters' %}',
+            type: 'get',
+            data: {
+                'category': selected_category,
+                'command': selected_command,
+                'ordering': ordering
+            },
+            success: search_success
+        };
+        $.ajax(options);
+    }
+
     function search_success(html) {
         $('.oneliners').html($(html).html());
         $('.pagination').remove();
@@ -90,13 +104,12 @@ These one-liners should help you automate tasks, troubleshoot problems, whether 
         if ($(this).hasClass('active')) {
             selected_category = null;
             $(this).removeClass('active');
-            location.reload();
         } else {
             $('.categories li a.active').removeClass('active');
             $(this).addClass('active');
             selected_category = $(this).text();
-            search_by_category();
         }
+        search_by_filters();
     });
 
     $('.commands a').click(function(e) {
@@ -104,13 +117,12 @@ These one-liners should help you automate tasks, troubleshoot problems, whether 
         if ($(this).hasClass('active')) {
             selected_command = null;
             $(this).removeClass('active');
-            location.reload();
         } else {
             $('.commands li a.active').removeClass('active');
             $(this).addClass('active');
             selected_command = $(this).text();
-            search_by_command();
         }
+        search_by_filters();
     });
 
 {% endblock %}
