--- a/oneliners/templates/oneliners/feeds/oneliners.html
+++ b/oneliners/templates/oneliners/feeds/oneliners.html
@@ -11,13 +11,13 @@
 
     <div class="explanation">
         <h4>Explanation</h4>
-        {{ oneliner.explanation | markdown:"safe" | linebreaks }}
+        {{ oneliner.explanation | markdown:"safe,fenced_code" | linebreaks }}
     </div>
 
     {% if oneliner.limitations %}
         <div class="limitations">
             <h4>Limitations</h4>
-            {{ oneliner.limitations | markdown:"safe" | linebreaks }}
+            {{ oneliner.limitations | markdown:"safe,fenced_code" | linebreaks }}
         </div>
     {% endif %}
 {% endwith %}
