Revamp command detection (cleanup of tags still needed)

--- a/oneliners/templates/oneliners/elements/oneliners_page.html
+++ b/oneliners/templates/oneliners/elements/oneliners_page.html
@@ -24,7 +24,7 @@
 
 <ul class="nav nav-pills commands collapse" id="commands">
     {% for command in command_cloud %}
-        <li class="nav-item"><a class="nav-link" href="#">{{ command.text }}</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">{{ command.name }}</a></li>
     {% endfor %}
 </ul>
 
