Add commands to one-liners with link to filter page

--- a/oneliners/templates/oneliners/elements/oneliner.html
+++ b/oneliners/templates/oneliners/elements/oneliner.html
@@ -48,13 +48,13 @@
                 {% endfor %}
             </div>
 
-            {% if user.is_staff %}
-            <div class="commands mb-2 alert alert-warning">
+            <div class="commands mb-2">
                 {% for command in oneliner.get_commands %}
-                    <span class="badge rounded-pill badge-light">{{ command }}</span>
+                    <a href="{% url 'command' command.pk %}">
+                        <span class="badge rounded-pill badge-light">{{ command }}</span>
+                    </a>
                 {% endfor %}
             </div>
-            {% endif %}
 
             {% if not boxed_oneliner %}
                 {% if user == oneliner.user %}
