--- a/oneliners/templates/base.html
+++ b/oneliners/templates/base.html
@@ -41,6 +41,8 @@
           <a class="nav-link mx-2" href="{% url 'oneliner_new' %}">Post</a>
         {% endif %}
 
+        {% flag_enabled 'SEARCH' as flag_search %}
+        {% if flag_search %}
         <form class="d-flex input-group w-auto mx-2" action="{% url 'search' %}" method="get">
           <input
             name="query"
@@ -55,6 +57,7 @@
             <i class="fas fa-search"></i>
           </span>
         </form>
+        {% endif %}
       </div>
       <!-- Left links -->
 
