Flag guard categories and commands filters

--- a/oneliners/templates/oneliners/elements/oneliners_page.html
+++ b/oneliners/templates/oneliners/elements/oneliners_page.html
@@ -1,3 +1,7 @@
+{% load feature_flags %}
+
+{% flag_enabled 'CATEGORIES_FILTER' as flag_categories_filter %}
+{% if flag_categories_filter %}
 <button
   class="btn btn-secondary"
   type="button"
@@ -6,7 +10,10 @@
   aria-expanded="false"
   aria-controls="categories"
 >Categories<i class="fas fa-angle-down ms-2"></i></button>
+{% endif %}
 
+{% flag_enabled 'COMMANDS_FILTER' as flag_commands_filter %}
+{% if flag_commands_filter %}
 <button
   class="btn btn-secondary"
   type="button"
@@ -15,6 +22,7 @@
   aria-expanded="false"
   aria-controls="commands"
 >Commands<i class="fas fa-angle-down ms-2"></i></button>
+{% endif %}
 
 <ul class="nav nav-pills categories collapse" id="categories">
     {% for category in category_cloud %}
