Rewrite intro blurb: no longer contributed, but curated

--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -39,8 +39,8 @@ This is an open-source project, built with love, Django, Python, jQuery, Git, Gi
 {% block content %}
 
 <p>Welcome to bashoneliners.com,
-a growing collection of practical and well-explained Bash one-liners, snippets, tips and tricks.
-We review and improve every contributed one-liner to make sure it is of high quality:
+a curated collection of practical and well-explained Bash one-liners, snippets, tips and tricks.
+We aim to make each published one-liner to be of high quality:
 useful, easy to read, follows best practices, with clear, detailed, accurate explanation.
 These one-liners should help you automate tasks, troubleshoot problems, whether it be in system administration,
     file management, networking or programming.</p>
